crates/uitest/fixtures/ty_check/unary.snap
---
source: crates/uitest/tests/ty_check.rs
expression: diags
input_file: crates/uitest/fixtures/ty_check/unary.fe
---
error[8-0016]: `std::ops::UnaryPlus` trait is not implemented
  ┌─ unary.fe:5:5
  │
5 │     +f
  │     ^^
  │     │
  │     `+` cant be applied to `Foo`
  │     Try implementing `std::ops::UnaryPlus` for `Foo`

error[8-0016]: `std::ops::Neg` trait is not implemented
  ┌─ unary.fe:6:5
  │
6 │     -f
  │     ^^
  │     │
  │     `-` cant be applied to `Foo`
  │     Try implementing `std::ops::Neg` for `Foo`

error[8-0016]: `std::ops::Not` trait is not implemented
  ┌─ unary.fe:7:5
  │
7 │     !f
  │     ^^
  │     │
  │     `!` cant be applied to `Foo`
  │     Try implementing `std::ops::Not` for `Foo`


